[gd_scene load_steps=2 format=2]

[ext_resource path="res://Informatik/InformatikGame.gd" type="Script" id=1]

[node name="InformatikGame" type="Node2D"]
script = ExtResource( 1 )

[node name="Fragestellung" type="TextEdit" parent="."]
margin_left = 12.0
margin_top = 19.5783
margin_right = 288.0
margin_bottom = 83.5783
rect_scale = Vector2( 0.517882, 0.507364 )
text = "Fragestellung"

[node name="Lösung" type="TextEdit" parent="."]
margin_left = 13.0
margin_top = 54.0
margin_right = 269.0
margin_bottom = 281.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Lösung"

[node name="Meins" type="Button" parent="."]
margin_left = 290.942
margin_top = 166.483
margin_right = 341.942
margin_bottom = 186.483
rect_scale = Vector2( 0.5, 0.5 )
text = "Meins"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 163.259
margin_top = 2.63951
margin_right = 203.259
margin_bottom = 16.6395
text = "Frage:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FremdFragestellung" type="Label" parent="."]
margin_left = 166.866
margin_top = 20.0
margin_right = 449.866
margin_bottom = 83.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Hier steht die Frage"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lösung2" type="Label" parent="."]
margin_left = 155.59
margin_top = 113.63
margin_right = 454.59
margin_bottom = 234.63
rect_scale = Vector2( 0.5, 0.5 )
text = "Lösung"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lösung3" type="Label" parent="."]
margin_left = 150.807
margin_top = 98.3606
margin_right = 276.807
margin_bottom = 112.361
text = "Lösung:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MeineAntwort" type="TextEdit" parent="."]
margin_left = 164.0
margin_top = 51.0
margin_right = 436.0
margin_bottom = 123.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Meine Antwort"

[node name="Check" type="Button" parent="."]
margin_left = 292.465
margin_top = 149.98
margin_right = 342.465
margin_bottom = 169.98
rect_scale = Vector2( 0.5, 0.5 )
text = "Check"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Meins" to="." method="_on_Meins_pressed"]
[connection signal="pressed" from="Check" to="." method="check_loesung"]
